# add-rsi

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: main.rs
