[package]
name = "add-rsi"
version = "1.0.2"
edition = "2024"
rust-version = "1.87"
authors = ["Tau Technologies"]
description = "CLI for appending Wilder RSI columns to Binance Vision CSV files"
readme = "README.md"
repository = "https://github.com/tau-technologies-trading/add-rsi"
homepage = "https://github.com/tau-technologies-trading/add-rsi"
license = "MIT"
keywords = ["rsi", "binance", "csv", "trading", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rayon = "1.10"
indicatif = "0.18"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
